--- a/cse127-fall20/index.html
+++ b/cse127-fall20/index.html
@@ -150,7 +150,7 @@ Mon Nov 30 2020: Symmetric-key crypto
   - [*Slides*](slides/14-symmetriccrypto.pdf)
   - *Read*: [Chapter 5](https://www.cl.cam.ac.uk/~rja14/Papers/SEv3-ch5-7sep.pdf) (skip 5.2.3, 5.2.5, 5.3.4, 5.3.5, 5.4, 5.7, 5.8) of Security Engineering
 
-Tue Dec  1 2020: PA7: Crypto
+Tue Dec  1 2020: [PA7: Crypto](pa/pa7.html)
 
 Wed Dec  2 2020: Public-key crypto
   - *Read*: Sections 5.2.5, 5.3.4, 5.3.5, 5.7, 5.8 of Security Engineering
