--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@ Mon Nov 30 2020: Symmetric-key crypto
 Tue Dec  1 2020: [PA7: Crypto](pa/pa7.html)
 
 Wed Dec  2 2020: Public-key crypto
+  - [*Slides*](slides/16-pubkeycrypto.pdf)
   - *Read*: Sections 5.2.5, 5.3.4, 5.3.5, 5.7, 5.8 of Security Engineering
   - *Read*: [Bleichenbacher's RSA signature forgery based on implementation error](https://mailarchive.ietf.org/arch/msg/openpgp/5rnE9ZRN1AokBVj3VqblGlP63QE/) by Hal Finney
 
