--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@ Wed Dec  2 2020: Public-key crypto
   - *Read*: [Bleichenbacher's RSA signature forgery based on implementation error](https://mailarchive.ietf.org/arch/msg/openpgp/5rnE9ZRN1AokBVj3VqblGlP63QE/) by Hal Finney
 
 Mon Dec  7 2020: TLS, PKI, and CT 
+  - [*Slides*](slides/17-tls.pdf)
 
 Thu Dec  8 2020: PA8: TLS
 
