--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ Mon Nov 23 2020: Network defenses
 Wed Nov 25 2020: No class
 
 Mon Nov 30 2020: Symmetric-key crypto
-  - [*Slides*](slides/14-symmetriccrypto.pdf)
+  - [*Slides*](slides/15-symmetriccrypto.pdf)
   - *Read*: [Chapter 5](https://www.cl.cam.ac.uk/~rja14/Papers/SEv3-ch5-7sep.pdf) (skip 5.2.3, 5.2.5, 5.3.4, 5.3.5, 5.4, 5.7, 5.8) of Security Engineering
 
 Tue Dec  1 2020: [PA7: Crypto](pa/pa7.html)
@@ -160,12 +160,14 @@ Wed Dec  2 2020: Public-key crypto
 Mon Dec  7 2020: TLS, PKI, and CT 
   - [*Slides*](slides/17-tls.pdf)
 
-Thu Dec  8 2020: PA8: TLS
-
 Wed Dec  9 2020: Privacy, anonymity, and ethics  
+  - [*Slides*](slides/18-privacy.pdf)
   - *Watch*: [Crypto 2020 Invited talk](https://www.youtube.com/watch?v=Ygq9ci0GFhA) by Seny Kamara
   - *Read*: [Chapter 26](https://www.cl.cam.ac.uk/~rja14/Papers/SEv3-ch26-7sep.pdf) of Security Engineering
   - *Optional*: [Chapter 20](https://www.cl.cam.ac.uk/~rja14/Papers/SEv3-ch20-7sep.pdf) (skip 20.5-20.7) of Security Engineering
+
+Thu Dec 10 2020: PA8: TLS
+
 Mon Dec 17 2020: Final exam
 
 
