--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@ Wed Dec  2 2020: Public-key crypto
 
 Mon Dec  7 2020: TLS, PKI, and CT 
   - [*Slides*](slides/17-tls.pdf)
+  - *Read*: [The Illustrated TLS 1.2 Connection](https://tls.ulfheim.net/) and [TLS 1.3 edition](https://tls13.ulfheim.net/)
 
 Wed Dec  9 2020: Privacy, anonymity, and ethics  
   - [*Slides*](slides/18-privacy.pdf)
