Added # to collision part

--- a/cse127-fall20/pa/pa7.html
+++ b/cse127-fall20/pa/pa7.html
@@ -280,7 +280,7 @@ could be done using a program in almost any language.  Put the following two
 lines into a file called `prefix`:
 
 ```
-!/bin/bash
+#!/bin/bash
 cat << "EOF" | openssl dgst -sha256 > DIGEST
 ```
 
