--- a/cse127-fall20/pa/pa8_temp.html
+++ b/cse127-fall20/pa/pa8_temp.html
@@ -1,5 +1,5 @@
 <meta charset="utf-8"><!-- -*- markdown -*- -->
-    **PA 7:  Cryptography (100 points)**
+    **PA 8:  TLS Implementation (????????????????????????????????????? points)**
 
 **Early Turn-In: ?????????????????????? by 11:59:59 PM (10% bonus)**
 
