--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ Wed Dec  9 2020: Privacy, anonymity, and ethics
   - *Read*: [Chapter 26](https://www.cl.cam.ac.uk/~rja14/Papers/SEv3-ch26-7sep.pdf) of Security Engineering
   - *Optional*: [Chapter 20](https://www.cl.cam.ac.uk/~rja14/Papers/SEv3-ch20-7sep.pdf) (skip 20.5-20.7) of Security Engineering
 
-Thu Dec 10 2020: PA8: TLS
+Thu Dec 10 2020: [PA8: MicroTLS](pa/pa8.html)
 
 Mon Dec 17 2020: Final exam
 
