added different resource for syscall reference since last one broke

--- a/cse127-winter21/pa/pa1.html
+++ b/cse127-winter21/pa/pa1.html
@@ -111,7 +111,7 @@ passed into the program as arguments. So <code>argv[0]</code> can be accessed fr
 <li><code>argv[0]</code> is the name of the program executed, <em>not</em> the first argument, which is <code>argv[1]</code> if
 supplied (or <code>8(%esp)</code> for our purposes). Then <code>argc</code> (or <code>0(%esp)</code>) will be 1 if the program was
 not passed any arguments, 2 if it was passed 1 argument, and so on.</li>
-<li>This <a href="https://syscalls.kernelgrok.com/">table of Linux system calls</a> may come in handy.</li>
+<li>This <a href="https://thevivekpandey.github.io/posts/2017-09-25-linux-system-calls.html">table of Linux system calls</a> may come in handy.</li>
 </ul>
 <h3 id="submission">Submission</h3>
 <p>Submit <code>echo.s</code> to &quot;1b. x86 echo&quot; on Gradescope.</p>
