--- a/cse127-winter21/index.html
+++ b/cse127-winter21/index.html
@@ -97,6 +97,13 @@
 	  </tr>
 
 	  <tr>
+	    <td>1/6
+	    <td>Discussion: PA 1
+	    <td>
+	    <td><a href="pa1/">PA 1 available</a>
+	  </tr>
+	  
+	  <tr>
 	    <td>1/7
 	    <td>Buffer overflow attacks<br>
 
@@ -116,6 +123,13 @@
 	      <a href="https://pax.grsecurity.net/docs/aslr.txt">ASLR</a><br>
 	      <a href="https://pax.grsecurity.net/docs/noexec.txt">NOEXEC</a><br>
 	    <td>
+	  </tr>
+
+	  <tr>
+	    <td>1/11
+	    <td>Discussion
+	    <td>
+	    <td><a href="pa1/">PA 1 due</a>
 	  </tr>
 	  
 	  <tr>
