--- a/cse127-winter21/index.html
+++ b/cse127-winter21/index.html
@@ -98,9 +98,9 @@
 
 	  <tr>
 	    <td>1/6
-	    <td>Discussion: PA 1
+	    <td>Discussion: Assignment 1
 	    <td>
-	    <td><a href="pa1/">PA 1 available</a>
+	    <td><a href="pa/pa1.html">Assignment 1 available</a>
 	  </tr>
 	  
 	  <tr>
@@ -129,7 +129,7 @@
 	    <td>1/11
 	    <td>Discussion
 	    <td>
-	    <td><a href="pa1/">PA 1 due</a>
+	    <td><a href="pa/pa1.html">Assignment 1 due</a>
 	  </tr>
 	  
 	  <tr>
