--- a/cse127-winter21/index.html
+++ b/cse127-winter21/index.html
@@ -126,9 +126,9 @@
 	  </tr>
 
 	  <tr>
-	    <td>1/11
+	    <td>1/13
 	    <td>Discussion
-	    <td>
+	    <td><a href="https://docs.google.com/presentation/d/1ia3P-tLHjWgYIh_OhQ_sSeBJZkUsYj4gpcMinFp2Y4M/edit?usp=sharing">Discussion 1 slides</a>
 	    <td><a href="pa/pa1.html">Assignment 1 due</a>
 	  </tr>
 	  
