--- a/cse127-winter21/index.html
+++ b/cse127-winter21/index.html
@@ -106,6 +106,7 @@
 	  <tr>
 	    <td>1/7
 	    <td>Buffer overflow attacks<br>
+	      <br><a href="slides/2-bufferoverflows.pdf">Lecture slides</a>
 
 	      <td><a href="http://phrack.org/issues/49/14.html#article">Smashing the stack for fun and profit</a> by Aleph One<br>
 	      <br>
@@ -118,6 +119,7 @@
 	  <tr>
 	    <td>1/12
 	    <td>Buffer overflow defenses<br>
+	      <br><a href="slides/3-lowlevelmitigations.pdf">Lecture slides</a>
 
 	    <td>
 	      <a href="https://pax.grsecurity.net/docs/aslr.txt">ASLR</a><br>
