updated pa2.html to the correct one, updated index.html

--- a/cse127-winter21/index.html
+++ b/cse127-winter21/index.html
@@ -131,7 +131,8 @@
 	    <td>1/13
 	    <td>Discussion
 	    <td>
-	    <td><a href="pa/pa1.html">Assignment 1 due</a>
+	    <td><a href="pa/pa1.html">Assignment 1 due</a><br>
+            <a href="pa/pa2.html">Assignment 2 available</a>
 	  </tr>
 	  
 	  <tr>
@@ -170,6 +171,12 @@
 
 	    <td>
 	  </tr>
+      <tr>
+        <td>1/23
+        <td>
+        <td>
+        <td><a href="pa/pa2.html">Assignment 2 due</a>
+      </tr>
 
 	  <tr>
 	    <td>1/26
