--- a/cse127-winter21/pa/pa2.html
+++ b/cse127-winter21/pa/pa2.html
@@ -1,134 +1,78 @@
-<meta charset="utf-8"><!-- -*- markdown -*- -->
-    **PA 2: Buffer overflows (75 pts + 25pts extra for sploit4)**
-
-**Early Turn-In: Wednesday, January 20, 2020 by 11:59:59 PM (10% bonus)**
-
-**Hard Deadline: Saturday, January 23, 2020 by 11:59:59 PM Pacific Time**
-
-The goal of this assignment is to gain hands-on experience with the effects of buffer overflows and other memory-safety bugs.
-
-**sploit1-sploit3 are required. sploit4 is extra credit!**
-
-- You will be provided a skeleton for implementing these exploits in C.
-- You must not discuss your solution with other students until seven days after the assignment deadline.
-
-# Getting Started
-
-To complete this assignment you will be provided with a VirtualBox VM and a set of files.
-
-## VM Image
-
-In order to match the environment in which your submission will be graded, all work for this assignment must be done on the VirtualBox VM we have provided, named `pa2box`. You can download the VM image [**here**](https://drive.google.com/file/d/1jgRPY8E4I2lv1uNCGQpeo0sl9RshvdRK/view?usp=sharing).
-
-Import the `pa2box.vbox` file into VirtualBox via the `Machine` &rarr; `Add` menu item. *Don't* create a brand-new VirtualBox VM or import the `pa2box-data.vmdk` file on its own: if you do this, you won't have the correct configuration.
-
-After importing the VM, select it in the VirtualBox sidebar and start it with the green arrow button or the `Machine` &rarr; `Start` menu item. The VM is configured with two users: `student`, with password `hacktheplanet`; and `root`, with password `hackallthethings`. Instead of using the command line through VirtualBox, we recommend that you SSH into your VM from another client. The VM image is configured to expose an SSH server on port 2222 of your system's loopback address (`127.0.0.1`).
-
-To SSH into the VM (from your host system running VirtualBox, ***not*** from inside the VM):
-
-```
-ssh -p 2222 student@127.0.0.1
-```
-
-To copy files from your computer to the VM:
-
-```
-scp -P 2222 -r /path/to/files/ student@127.0.0.1:/home/student
-```
-
-To copy files from the VM to your computer:
-
-```
-scp -P 2222 student@127.0.0.1:/path/to/files/ /destination/path
-```
-
-Please note that SSH is disabled for `root`, so you can only SSH in as the `student` user. You can still log in as `root` using `su` or by logging into the VM directly.
-
-## Assignment Files
-
-Starter files are included inside the `student` home directory of the VM image.
-
-The `targets` directory contains a `Makefile` to generate target executables specific to your PID (as well as a folder called `base`, which you should not modify, used to generate the targets).
-
-Exploit starter code can be found in the `sploits1`-`sploits4` directories: one per each of the four vulnerable target programs. Each of these contains a `Makefile`, a `shellcode.h` header file providing Aleph One's shellcode, and a `sploitN.c` file in which you should write your exploit code (in addition to an `assignment.toml` file, which should not be modified).
-
-You will be writing an exploit for each of the four vulnerable programs provided in the assignment.  Each exploit, when run in the VM with its target installed setuid-root in `/tmp`,  should yield a root shell (`/bin/sh`). You can verify that the shell has been launched as `root` by typing `whoami`, to which you should see the response `root`. You *must* use Aleph One's shellcode in `shellcode.h`,  as this will be used in the grading scripts.
-
-For each exploit, in addition to your `.c` file, please also create a corresponding file `writeup.txt` containing a brief description of how the exploit works.
-
-# Exploit Generation
-
-To complete the assignment, you will need to: generate targets specific to your PID; use GDB to find vulnerabilities in the targets; and, finally, craft your exploit programs.
-
-## Generating the Targets
-
-Run `make generate` in the `targets` directory to create the four target source files specific to you. This will prompt you for your student ID (`A########` or `U########`), which will be used to randomize portions of the contents of `target1.c`-`target4.c`.
-
-Run `make` to build the target binaries `target1`-`target4`.
-
-Run `sudo make install` to copy the binaries into the `/tmp` directory.
-
-Finally, run `sudo make setuid` to mark the binaries as setuid-root. If you forget this step, then your exploits will end up launching a normal shell instead of a root shell!
-
-## Exploit Notes
-
-For this assignment you should read and have a solid understanding of Aleph One's “Smashing the Stack for Fun and Profit”.
-
-Aleph One gives code that calculates addresses on the target’s stack based on addresses on the exploit’s stack. However, addresses on the exploit’s stack can change based on how the exploit is executed (working directory, arguments, environment, etc.). **You must therefore hard-code target stack locations in your exploits.**
-
-You should not use a function such as `get_sp()` in the exploits you hand in. You should only modify the `sploitN.c` files and corresponding `writeup.txt` files; i.e., your exploits should work with unmodified Makefiles, targets, etc. In grading, the exploits may be run with a different working directory. Your exploits must work in these cases also.  If you hard-code the target's stack locations into your exploit you should be fine. Your exploit programs should not take any command-line arguments.
-
-Shutting down the VM removes the files in /tmp; if you want to keep them, pause the VM and save its state!
-
-# IMPORTANT: Using the shellcode
-The shellcode is defined for you in `shellcode.h` inside each `sploitN/` directory. To use the shellcode in your sploit buffers, please **import the shellcode with `#include` and copy the contents programatically**. You can do this with `memcpy`, `strcpy`, or even just a `for` loop with array assignments. **Please do NOT manually copy-paste the shellcode string literal into your sploitN.c file**. While the sploit will still work, it may break grading.
-
-# Using GDB
-
-To run an exploit in GDB, run, e.g., `gdb sploit1` to execute `sploit1`.
-
-Note that there are **two executables** when we run these programs, since, e.g., `sploit1` will execute `target1`. Because of this, you can use the following sample workflow to get started in GDB:
-
-1. `b main` --- break at `main` in `sploit1.c`
-2. `r` --- run the executable `sploit1`
-3. `c` --- continue until `main` in `target1.c`
-4. `b foo` --- set a breakpoint at `foo` in `target1.c`
-
-Note that if you try to set breakpoints in `targetN` before the program has started executing `targetN`, e.g., if you tried to run `b foo` before step 3, you may get the following message:
-
-`Make breakpoint pending on future shared library load? (y or [n])`
-
-Type `y` will also set the breakpoints in `targetN`.
-
-
-Here are some additional GDB commands that may come in handy:
-
-* `p var` --- prints the value of a variable named `var`
-* `p buf` --- (if `buf` is an array) prints the contents of an array named `buf`
-* `p &buf` --- prints the starting address of an array or variable named `buf`
-* `i r` --- view registers
-* `i frame` --- view info about the current stack frame
-* `i stack` --- view high level info about the stack
-* `help <command>` --- get help inside GDB about a particular command
-
-
-Also refer back to the sample commands in Assignment 1.
-
-
-Note that this is only a cursory overview of GDB; much more info is available from online
-resources.
-
-
-## Submission
-1. Create a file named `PID` in the student home directory on the VM, and put your PID in it (ex: `A12345678`)
-2. Run the following command from the student home directory `tar -czvf pa2.tar.gz PID sploit[1-4]/ targets/` This will create a `pa2.tar.gz` in the home directory with all your files in it. You can see what files were zipped by running `tar -tf pa2.tar.gz`
-3. `scp` the `pa2.tar.gz` file to your local computer and submit to gradescope.
-
-Note: The autograder will only check whether your sploits can be compiled successfully. The score is only a reference for you to see if you pass all compilation test easily. In the meanwhile, you'll know your answer is correct if you followed the instructions above and you were able to get a root shell. The `actual score` for this assignment will be posted when we are done with grading and you will be notified.
-
-
-<style class="fallback">body{visibility:hidden;white-space:pre;font-family:monospace}</style><script src="../markdeep.min.js"></script>
-<script>
-  window.alreadyProcessedMarkdeep || (document.body.style.visibility="visible");
-  markdeepOptions= {tocStyle: 'long', sortScheduleLists: false };
-</script>
+<h1>Assignment 2 <em>75 pts + 25pts extra for sploit4</em></h1>
+<p><strong>Early Turn-in Deadline: Wednesday, January 20, 2021 by 11:59:59 PM Pacific Time</strong></p>
+<p><strong>Hard Deadline: Saturday, January 23, 2021 by 11:59:59 PM Pacific Time</strong></p>
+<p>The goal of this assignment is to gain hands-on experience with the effects of buffer overflows and other memory-safety bugs. You are allowed to work in teams for this assignment.</p>
+<p><strong>sploit1-sploit3 are required. sploit4 is extra credit!</strong></p>
+<ul>
+<li>You will be provided a skeleton for implementing these exploits in C.</li>
+<li>You must not discuss your solution with other students until seven days after the assignment deadline.</li>
+</ul>
+<h2>Getting Started</h2>
+<p>To complete this assignment you will be provided with a VirtualBox VM and a set of files.</p>
+<h3>VM Image</h3>
+<p>In order to match the environment in which your submission will be graded, all work for this assignment must be done on the VirtualBox VM we have provided, named <code>pa2box</code>. You can download the VM image <a href="https://drive.google.com/file/d/1jgRPY8E4I2lv1uNCGQpeo0sl9RshvdRK/view?usp=sharing"><strong>here</strong></a>.</p>
+<p>Import the <code>pa2box.vbox</code> file into VirtualBox via the <code>Machine</code> → <code>Add</code> menu item. <em>Don't</em> create a brand-new VirtualBox VM or import the <code>pa2box-data.vmdk</code> file on its own: if you do this, you won't have the correct configuration.</p>
+<p>After importing the VM, select it in the VirtualBox sidebar and start it with the green arrow button or the <code>Machine</code> → <code>Start</code> menu item. The VM is configured with two users: <code>student</code>, with password <code>hacktheplanet</code>; and <code>root</code>, with password <code>hackallthethings</code>. Instead of using the command line through VirtualBox, we recommend that you SSH into your VM from another client. The VM image is configured to expose an SSH server on port 2222 of your system's loopback address (<code>127.0.0.1</code>).</p>
+<p>To SSH into the VM (from your host system running VirtualBox, <em><strong>not</strong></em> from inside the VM):</p>
+<pre><code>ssh -p 2222 student@127.0.0.1
+</code></pre>
+<p>To copy files from your computer to the VM:</p>
+<pre><code>scp -P 2222 -r /path/to/files/ student@127.0.0.1:/home/student
+</code></pre>
+<p>To copy files from the VM to your computer:</p>
+<pre><code>scp -P 2222 student@127.0.0.1:/path/to/files/ /destination/path
+</code></pre>
+<p>Please note that SSH is disabled for <code>root</code>, so you can only SSH in as the <code>student</code> user. You can still log in as <code>root</code> using <code>su</code> or by logging into the VM directly.</p>
+<h3>Assignment Files</h3>
+<p>Starter files are included inside the <code>student</code> home directory of the VM image.</p>
+<p>The <code>targets</code> directory contains a <code>Makefile</code> to generate target executables specific to your PID (as well as a folder called <code>base</code>, which you should not modify, used to generate the targets).</p>
+<p>Exploit starter code can be found in the <code>sploits1</code>-<code>sploits4</code> directories: one per each of the four vulnerable target programs. Each of these contains a <code>Makefile</code>, a <code>shellcode.h</code> header file providing Aleph One's shellcode, and a <code>sploitN.c</code> file in which you should write your exploit code (in addition to an <code>assignment.toml</code> file, which should not be modified).</p>
+<p>You will be writing an exploit for each of the four vulnerable programs provided in the assignment.  Each exploit, when run in the VM with its target installed setuid-root in <code>/tmp</code>,  should yield a root shell (<code>/bin/sh</code>). You can verify that the shell has been launched as <code>root</code> by typing <code>whoami</code>, to which you should see the response <code>root</code>. You <em>must</em> use Aleph One's shellcode in <code>shellcode.h</code>,  as this will be used in the grading scripts.</p>
+<p>For each exploit, in addition to your <code>.c</code> file, please also create a corresponding file <code>writeup.txt</code> containing a brief description of how the exploit works.</p>
+<h2>Exploit Generation</h2>
+<p>To complete the assignment, you will need to: generate targets specific to your PID; use GDB to find vulnerabilities in the targets; and, finally, craft your exploit programs.</p>
+<h3>Generating the Targets</h3>
+<p>Run <code>make generate</code> in the <code>targets</code> directory to create the four target source files specific to you. This will prompt you for your student ID (<code>A########</code> or <code>U########</code>), which will be used to randomize portions of the contents of <code>target1.c</code>-<code>target4.c</code>.</p>
+<p>Run <code>make</code> to build the target binaries <code>target1</code>-<code>target4</code>.</p>
+<p>Run <code>sudo make install</code> to copy the binaries into the <code>/tmp</code> directory.</p>
+<p>Finally, run <code>sudo make setuid</code> to mark the binaries as setuid-root. If you forget this step, then your exploits will end up launching a normal shell instead of a root shell!</p>
+<h3>Exploit Notes</h3>
+<p>For this assignment you should read and have a solid understanding of Aleph One's “Smashing the Stack for Fun and Profit”.</p>
+<p>Aleph One gives code that calculates addresses on the target’s stack based on addresses on the exploit’s stack. However, addresses on the exploit’s stack can change based on how the exploit is executed (working directory, arguments, environment, etc.). <strong>You must therefore hard-code target stack locations in your exploits.</strong></p>
+<p>You should not use a function such as <code>get_sp()</code> in the exploits you hand in. You should only modify the <code>sploitN.c</code> files and corresponding <code>writeup.txt</code> files; i.e., your exploits should work with unmodified Makefiles, targets, etc. In grading, the exploits may be run with a different working directory. Your exploits must work in these cases also.  If you hard-code the target's stack locations into your exploit you should be fine. Your exploit programs should not take any command-line arguments.</p>
+<p>Shutting down the VM removes the files in /tmp; if you want to keep them, pause the VM and save its state!</p>
+<h2>IMPORTANT: Using the shellcode</h2>
+<p>The shellcode is defined for you in <code>shellcode.h</code> inside each <code>sploitN/</code> directory. To use the shellcode in your sploit buffers, please <strong>import the shellcode with <code>#include</code> and copy the contents programatically</strong>. You can do this with <code>memcpy</code>, <code>strcpy</code>, or even just a <code>for</code> loop with array assignments. <strong>Please do NOT manually copy-paste the shellcode string literal into your sploitN.c file</strong>. While the sploit will still work, it may break grading.</p>
+<h2>Using GDB</h2>
+<p>To run an exploit in GDB, run, e.g., <code>gdb sploit1</code> to execute <code>sploit1</code>.</p>
+<p>Note that there are <strong>two executables</strong> when we run these programs, since, e.g., <code>sploit1</code> will execute <code>target1</code>. Because of this, you can use the following sample workflow to get started in GDB:</p>
+<ol>
+<li><code>b main</code> --- break at <code>main</code> in <code>sploit1.c</code></li>
+<li><code>r</code> --- run the executable <code>sploit1</code></li>
+<li><code>c</code> --- continue until <code>main</code> in <code>target1.c</code></li>
+<li><code>b foo</code> --- set a breakpoint at <code>foo</code> in <code>target1.c</code></li>
+</ol>
+<p>Note that if you try to set breakpoints in <code>targetN</code> before the program has started executing <code>targetN</code>, e.g., if you tried to run <code>b foo</code> before step 3, you may get the following message:</p>
+<p><code>Make breakpoint pending on future shared library load? (y or [n])</code></p>
+<p>Type <code>y</code> will also set the breakpoints in <code>targetN</code>.</p>
+<p>Here are some additional GDB commands that may come in handy:</p>
+<ul>
+<li><code>p var</code> --- prints the value of a variable named <code>var</code></li>
+<li><code>p buf</code> --- (if <code>buf</code> is an array) prints the contents of an array named <code>buf</code></li>
+<li><code>p &amp;buf</code> --- prints the starting address of an array or variable named <code>buf</code></li>
+<li><code>i r</code> --- view registers</li>
+<li><code>i frame</code> --- view info about the current stack frame</li>
+<li><code>i stack</code> --- view high level info about the stack</li>
+<li><code>help &lt;command&gt;</code> --- get help inside GDB about a particular command</li>
+</ul>
+<p>Also refer back to the sample commands in Assignment 1.</p>
+<p>Note that this is only a cursory overview of GDB; much more info is available from online
+resources.</p>
+<h3>Submission</h3>
+<ol>
+<li>Create a file named <code>PID</code> in the student home directory on the VM, and put your PID in it (ex: <code>A12345678</code>)</li>
+<li>Run the following command from the student home directory <code>tar -czvf pa2.tar.gz PID sploit[1-4]/ targets/</code> This will create a <code>pa2.tar.gz</code> in the home directory with all your files in it. You can see what files were zipped by running <code>tar -tf pa2.tar.gz</code></li>
+<li><code>scp</code> the <code>pa2.tar.gz</code> file to your local computer and submit to gradescope.</li>
+<li>If you work in teams, only one of you need to submit your code to gradescope. After submission, you can find the <code>Add Group Member</code> button to add your teammate.</li>
+</ol>
+<p>Note: The autograder will only check whether your sploits can be compiled successfully. The score is only a reference for you to see if you pass all compilation test easily. In the meanwhile, you'll know your answer is correct if you followed the instructions above and you were able to get a root shell. The <code>actual score</code> for this assignment will be posted when we are done with grading and you will be notified.</p>
