--- a/cse127-winter21/pa/pa2.html
+++ b/cse127-winter21/pa/pa2.html
@@ -1,7 +1,7 @@
 <h1>Assignment 2 <em>75 pts + 25pts extra for sploit4</em></h1>
 <p><strong>Early Turn-in Deadline: Wednesday, January 20, 2021 by 11:59:59 PM Pacific Time</strong></p>
 <p><strong>Hard Deadline: Saturday, January 23, 2021 by 11:59:59 PM Pacific Time</strong></p>
-<p>The goal of this assignment is to gain hands-on experience with the effects of buffer overflows and other memory-safety bugs. You are allowed to work in teams for this assignment.</p>
+<p>The goal of this assignment is to gain hands-on experience with the effects of buffer overflows and other memory-safety bugs. You are allowed to discuss this assignment in general terms with your classmates but are expected to implement and turn in your own solutions.</p>
 <p><strong>sploit1-sploit3 are required. sploit4 is extra credit!</strong></p>
 <ul>
 <li>You will be provided a skeleton for implementing these exploits in C.</li>
