added discussion slides

--- a/cse127-winter21/index.html
+++ b/cse127-winter21/index.html
@@ -130,7 +130,7 @@
 	  <tr>
 	    <td>1/13
 	    <td>Discussion
-	    <td>
+	    <td><a href=resources/discussion_slides/week_2_discussion.pdf>Discussion 2 Slides</a>
 	    <td><a href="pa/pa1.html">Assignment 1 due</a><br>
             <a href="pa/pa2.html">Assignment 2 available</a>
 	  </tr>
